# strongswan-cloud-metrics

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  strongswan-cloud-metrics.service  watcher.py
.github/workflows/: ci.yml
src/strongswan_cloud_metrics/: analysis.py  config.py  db.py  watcher.py
tests/: test_watcher.py
